# poe-copilot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: history.txt
data/patch_notes/: 3.27_keepers.md  3.28_mirage.md
data/topics/: character_building.md  currency_and_economy.md  gear_and_crafting.md
scripts/: build_local_database.py
src/poe_agent/: __main__.py  agent.py  context.py  delegation.py  main.py  onboarding.py  orchestrator.py  primer.py  router.py
src/poe_agent/agents/: answerer.md  build_agent.md  planner.md  registry.json  researcher.md  router.md  timeline.md
src/poe_agent/tools/: __init__.py  knowledge.py  poe_ninja.py  web.py
src/poe_copilot/: __main__.py  agent.py  config.py  constants.py  context.py  main.py  onboarding.py  orchestrator.py
src/poe_copilot/assets/: player_context.md  registry.json  spinner_labels.txt  timeline.md
src/poe_copilot/assets/agents/: analyst.md  answerer.md  build_agent.md  fact_checker.md  identity.md  researcher.md  router.md
src/poe_copilot/assets/agents/loadouts/: builds.md  builds_check.md
src/poe_copilot/assets/database/: ascendancies.txt  currencies.txt  game_mechanics.txt  passive_skills.txt  skill_gems.txt  unique_items.txt
src/poe_copilot/assets/database/patch_notes/: 3.26  3.27  3.28
src/poe_copilot/backends/: __init__.py  anthropic.py  backend.py  ollama.py
src/poe_copilot/core/: __init__.py  agent.py  cli.py  context.py  orchestrator.py
src/poe_copilot/tools/: __init__.py  database.py  poe_ninja.py  web.py
tests/: conftest.py  test_agent.py  test_context.py  test_onboarding.py  test_orchestrator.py  test_poe_ninja.py  test_tools_init.py  test_web.py
tests/backends/: test_ollama.py
tests/core/: test_agent.py  test_orchestrator.py
tests/tools/: test_database.py  test_poe_ninja.py  test_tools_init.py  test_web.py
