[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poe-copilot"
version = "0.1.0"
description = "A terminal AI copilot for Path of Exile"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "ddgs>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "InquirerPy>=0.3.4",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = ["pre-commit>=4.0", "mypy>=1.15.0", "ruff>=0.15.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 81

[tool.ruff.lint]
select = ["D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260205",
]

[project.scripts]
poechat = "poe_copilot.__main__:main"
